# autofwd

./: Cargo.toml  LICENSE  README.md  mise.toml
.github/workflows/: bump-version.yml  release.yml  screenshot.yml  test.yml
crates/autofwd/: Cargo.toml  build.rs
crates/autofwd-agent/: Cargo.toml
crates/autofwd-agent/src/: main.rs  netlink.rs
crates/autofwd/src/: deploy.rs  embedded.rs  events.rs  main.rs  monitor.rs  ports.rs  probe.rs  proc_net.rs  ssh.rs  tui.rs
crates/autofwd/tests/: e2e.rs
crates/autofwd/tests/support/: container.rs
docs/: demo.tape
src/: client.rs  events.rs  forward.rs  main.rs  monitor.rs  ports.rs  proc_net.rs  ssh.rs  tui.rs
tests/: e2e.rs
tests/docker/: Dockerfile
tests/support/: container.rs  mod.rs
