[package]
name = "autofwd"
version = "0.1.0"
edition = "2021"
description = "Cursor-style auto port forwarding for SSH sessions"
license = "MIT"

[dependencies]
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
humantime = "2"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
rand = "0.8"
tempfile = "3"
